# kokkos-cmake

./: CMakeLists.txt  KokkosCore_config.h
